# LAB2

./: CMakeLists.txt  README.md  main.cpp  tasks.cpp  tasks.h
